[package]
name = "actopts"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-trait = "0.1"
async-std = { version = "1", features = ["attributes"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "blocking", "time"] }
once_cell = "1.4"
anyhow = "1.0"
fnv = "1.0"
slab = "0.4"
